--- a/forms.css
+++ b/forms.css
@@ -17,3 +17,14 @@ form:valid {
     height: 24px;
     margin: 10px;
 }
+select {
+    width: 300px;
+    height: 140px;
+    font-size: 24px;
+    text-align: center;
+}
+option {
+    overflow: unset; /* only in firefox */
+    color: rgb(158, 12, 12);
+    background-color: rgb(253, 158, 206);
+}
