--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,3 +4,12 @@ nav ul li {
     font-size: 1.5rem; 
     color: rgb(226, 100, 100);
 }
+a {
+    cursor: pointer;
+}
+.me {
+    margin: 50px 0px 50px 50px;
+}
+.me label {
+    cursor: pointer;
+}
